--- a/src/WpfScreenshotApp/Views/StickyImageWindow.xaml
+++ b/src/WpfScreenshotApp/Views/StickyImageWindow.xaml
@@ -1,8 +1,6 @@
 <Window x:Class="WpfScreenshotApp.Views.StickyImageWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Width="300"
-        Height="200"
         WindowStyle="None"
         AllowsTransparency="True"
         Background="Transparent"
@@ -13,6 +11,6 @@
         MouseLeftButtonDown="OnMouseLeftButtonDown"
         MouseDoubleClick="OnMouseDoubleClick">
     <Border BorderBrush="#FF0078D7" BorderThickness="2" CornerRadius="8" Background="#F0FFFFFF" Padding="8">
-        <Image x:Name="StickyImage" Stretch="Uniform" />
+        <Image x:Name="StickyImage" Stretch="None" />
     </Border>
 </Window>
